rename deployment endpoint to apps
